@@ -1,0 +1,8 @@
+Empty will put all contents of specified container either on the ground or in your opened container.
+
+Syntax is:
+ empty item
+
+item should be a container.
+
+If "all" is specified, all containers are emptied.
